--- a/examples/ex-c/CMakeLists.txt
+++ b/examples/ex-c/CMakeLists.txt
@@ -1,18 +1,18 @@
-cmake_minimum_required(VERSION 3.1.3 FATAL_ERROR)
-cmake_policy(SET CMP0042 NEW)
-cmake_policy(SET CMP0048 NEW)
+cmake_minimum_required(VERSION 3.13 FATAL_ERROR)
 
-#------------------------------------------------------------------------------#
 project(TiMemory-C-Example LANGUAGES C)
-message(STATUS "Project: ${PROJECT_NAME}")
 
 set(EXE_NAME test_c_timing)
+set(COMPONENTS c static compile-options)
 
-find_package(TiMemory REQUIRED)
+option(USE_EXTERN_TEMPLATES "Enable extern templates" OFF)
+if(USE_EXTERN_TEMPLATES)
+    list(APPEND COMPONENTS extern-templates)
+endif()
 
+find_package(TiMemory REQUIRED COMPONENTS ${COMPONENTS})
 add_executable(${EXE_NAME} ${EXE_NAME}.c)
-
-target_link_libraries(${EXE_NAME} timemory-c-library-static timemory-c-compile-options)
+target_link_libraries(${EXE_NAME} timemory)
 
 if(NOT DEFINED TIMEMORY_SETUP_PY OR NOT TIMEMORY_SETUP_PY)
     install(TARGETS ${EXE_NAME} DESTINATION bin)
