--- a/examples/ex-cxx-tuple/CMakeLists.txt
+++ b/examples/ex-cxx-tuple/CMakeLists.txt
@@ -3,12 +3,7 @@ cmake_minimum_required(VERSION 3.13 FATAL_ERROR)
 project(TiMemory-CXX-Tuple-Example LANGUAGES C CXX)
 
 set(EXE_NAME test_cxx_tuple)
-set(COMPONENTS cxx compile-options)
-
-option(USE_EXTERN_TEMPLATES "Enable extern templates" OFF)
-if(USE_EXTERN_TEMPLATES)
-    list(APPEND COMPONENTS extern-templates)
-endif()
+set(COMPONENTS cxx compile-options extern-templates)
 
 find_package(TiMemory REQUIRED COMPONENTS ${COMPONENTS})
 add_executable(${EXE_NAME} ${EXE_NAME}.cpp)
