--- a/cmake/Templates/TiMemoryConfig.cmake.in
+++ b/cmake/Templates/TiMemoryConfig.cmake.in
@@ -320,7 +320,15 @@ if(NOT "${@PROJECT_NAME@_FIND_COMPONENTS}" STREQUAL "")
     endmacro()
 
     if("extern-templates" IN_LIST @PROJECT_NAME@_FIND_COMPONENTS)
-        @PROJECT_NAME@_LINK_TARGET_IF_EXISTS(timemory-extern-templates extern-templates)
+        if(NOT WIN32)
+            @PROJECT_NAME@_LINK_TARGET_IF_EXISTS(timemory-extern-templates extern-templates)
+        else()
+            message(WARNING "timemory-extern-templates not available on Windows")
+            list(REMOVE_ITEM @PROJECT_NAME@_FIND_COMPONENTS timemory-extern-templates)
+            list(REMOVE_ITEM @PROJECT_NAME@_FIND_COMPONENTS extern-templates)
+            list(REMOVE_ITEM @PROJECT_NAME@_FOUND_COMPONENTS timemory-extern-templates)
+            list(REMOVE_ITEM @PROJECT_NAME@_FOUND_COMPONENTS extern-templates)
+        endif()
     endif()
 
     foreach(_LANGUAGE ${_LANGUAGES})
